statement1/jenkins-sg.tf
resource "aws_security_group" "jenkins-sg" {
  vpc_id      = "${aws_vpc.infra-vpc.id}"
  name        = "jenkins-sg"
  description = "jenkins-sg"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    name = "Jenkins-sg"
  }
}
