statement1/tomcat-sg.tf
resource "aws_security_group" "tomcat-sg" {
  vpc_id      = "${aws_vpc.infra-vpc.id}"
  name        = "tomcat-sg"
  description = "tomcat-sg"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    name = "tomcat-sg"
  }
}
